# mycelium

./: .babelrc  .eslintrc  .gitignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  clare  ff  install.sh  package.json  tsconfig.json
fastapi-backend/: .dockerignore  Dockerfile  alembic.ini  package.json  pyproject.toml  start.sh
fastapi-backend/alembic_migrations/: env.py
fastapi-backend/alembic_migrations/versions/: 0001_initial.py  0002_coordination.py  0003_drop_presences_and_user_tables.py  0004_add_audit_events.py  0005_add_workspace_mas_agents.py  0006_add_memory_and_room_modes.py  0007_add_notebook_scope_and_namespace_fields.py  0008_add_file_path_to_memories.py  0009_resize_embedding_vector_to_1536.py  0009_room_mas_id.py
fastapi-backend/app/: __init__.py  bus.py  config.py  database.py  main.py  models.py  schemas.py
fastapi-backend/app/agents/: __init__.py  llm_provider.py
fastapi-backend/app/agents/evidence_gathering/: embeddings.py  embeddings_config.yml  evidence.py  llm_clients.py  multi_entities.py  schemas.py  single_entity.py  utiles.py
fastapi-backend/app/agents/protocol/sstp/: __init__.py  __main__.py  _base.py  commit.py  delegation.py  evidence_bundle.py  intent.py  knowledge.py  memory_delta.py  negmas_sao.py  negotiate.py  query.py
fastapi-backend/app/agents/semantic_negotiation/: __init__.py  intent_discovery.py  negotiation_model.py  options_generation.py  room_negotiator.py  semantic_negotiation.py
fastapi-backend/app/knowledge/: adapter.py  edge.py  graph_db.py  ingestion.py  node.py  prompts.py  schemas.py  service.py
fastapi-backend/app/routes/: agents.py  audit.py  cfn_proxy.py  cognition_engine.py  coordination.py  knowledge.py  mas.py  memory.py  messages.py  notebook.py  rooms.py  sessions.py  stream.py  workspaces.py
fastapi-backend/app/services/: _cfn_call_timing.py  async_coordination.py  cfn_graph_read.py  cfn_knowledge.py  cfn_negotiation.py  cfn_resolve.py  coordination.py  embedding.py  filesystem.py  indexer.py  ingest_dedupe.py  ingest_log_buffer.py  llm_health.py  metrics.py  reindex.py
fastapi-backend/docker/: Dockerfile.agensgraph
fastapi-backend/scripts/: test_negotiation_llm.py
fastapi-backend/tests/: conftest.py  test_audit.py  test_cfn_proxy.py  test_cfn_read_surface.py  test_cfn_resolve.py  test_coordination.py  test_coordination_routes.py  test_filesystem.py  test_ingest_dedupe.py  test_ingest_log_buffer.py  test_ingestion.py  test_integration.py  test_knowledge_ingest.py  test_llm_health.py  test_memory.py  test_notebook.py  test_registry.py  test_session_spawn.py  test_structured_memory.py
mycelium-cli/: package.json  pyproject.toml
mycelium-cli/src/mycelium/: __init__.py  __main__.py  cli.py  collector.py  collector_main.py  config.py  doc_ref.py  docker_utils.py  error_handler.py  exceptions.py  filesystem.py  generate_cli_docs.py  http_client.py  identity.py  prom_scrape.py  sstp.py  ui_status.py
mycelium-cli/src/mycelium/adapters/claude-code/: __init__.py
mycelium-cli/src/mycelium/animations/: __init__.py  hexspin.py  spores.py
mycelium-cli/src/mycelium/commands/: __init__.py  adapter.py  announce.py  cfn.py  config.py  daemon.py  docs.py  doctor.py  install.py  instance.py  memory.py  message.py  metrics.py  negotiate.py  notebook.py  room.py  send.py  session.py
mycelium-cli/src/mycelium/data/: pricing.json
mycelium-cli/src/mycelium/docker/: .env.defaults  Dockerfile.cfn-node-dev  compose-dev.yml  compose.yml  env.defaults
mycelium-cli/src/mycelium/docker/initdb/: create-cfn-cp-db.sh
mycelium-cli/src/mycelium/docs/: architecture.md  cli-reference.md  cognitive-engine.md  index.md  knowledge-graph.md  memory.md  metrics.md  notebook.md  overview.md  quickstart.md  rooms.md  sessions.md  troubleshooting.md
mycelium-cli/src/mycelium/docs/commands/: adapter.md  config.md  docs.md  memory.md  message.md  room.md
mycelium-cli/src/mycelium/docs/concepts/: memory.md  rooms.md
mycelium-cli/src/mycelium/docs/guides/: structured-memory.md
mycelium-cli/src/mycelium/utils/: __init__.py  room.py
mycelium-cli/src/mycelium_backend_client/: __init__.py
mycelium-cli/src/mycelium_backend_client/api/agents/: create_agent_api_workspaces_workspace_id_mas_mas_id_agents_post.py  delete_agent_api_workspaces_workspace_id_mas_mas_id_agents_agent_id_delete.py  get_agent_api_workspaces_workspace_id_mas_mas_id_agents_agent_id_get.py  (+1 more)
mycelium-cli/src/mycelium_backend_client/models/: __init__.py  agent_create.py  agent_create_memory_config_type_0.py  agent_read.py  agent_read_memory_config_type_0.py  agent_update_memory_config_type_0.py  audit_event_create.py  audit_event_create_audit_information_type_0.py  audit_event_read.py  audit_event_read_audit_information_type_0.py  cfn_concepts_by_ids_api_cfn_knowledge_concepts_post_response_cfn_concepts_by_ids_api_cfn_knowledge_concepts_post.py  cfn_graph_paths_api_cfn_knowledge_paths_post_response_cfn_graph_paths_api_cfn_knowledge_paths_post.py  cfn_header.py  cfn_list_api_cfn_knowledge_list_get_response_cfn_list_api_cfn_knowledge_list_get.py  cfn_query_api_cfn_knowledge_query_post_response_cfn_query_api_cfn_knowledge_query_post.py  cfn_relation_attributes.py  evidence_payload_metadata.py  evidence_response_metadata.py  extraction_payload.py  extraction_payload_metadata.py  extraction_response.py  ingest_event.py  ingest_event_state.py  ingest_log_response.py  ingest_stats_response.py  ingest_stats_response_by_agent.py  ingest_stats_response_by_mas.py  knowledge_graph_delete_request.py  knowledge_graph_delete_request_records_type_0.py  knowledge_graph_query_criteria.py  knowledge_graph_query_request_records.py  knowledge_graph_store_request.py  knowledge_graph_store_request_records_type_0.py  knowledge_ingest_request_records_item.py  knowledge_ingest_response.py  mas_read.py  memory_create_value_type_0.py  memory_read.py  memory_read_value_type_0.py  memory_search_request.py  (+13 more)
mycelium-cli/tests/: test_metrics_math.py  test_openclaw_scanner_guard.py  test_prom_scrape.py
(+317 files in other folders)
