[project]
name = "mycelium-backend"
version = "0.1.0"
description = "Mycelium FastAPI backend — async room coordination via Postgres LISTEN/NOTIFY"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.115.0,<0.136",
    "asyncpg>=0.31.0,<0.32",
    "pydantic-settings>=2.5.2,<3",
    "httpx>=0.28.1",
    "python-multipart>=0.0.9",
    "anthropic>=0.40.0",
    "litellm[proxy]==1.83.14", # 1.82.7 and 1.82.8 are compromised (supply chain attack); [proxy] pulls in boto3 for Bedrock
    "greenlet>=3.0",
    "agensgraph-python==1.0.2",
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.3.0",
    "alembic>=1.14.0,<2",
    "fastembed>=0.8.0",
    "pip-system-certs>=5.3",
    "watchdog>=6.0.0",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1,<5",
    "ruff>=0.11.0,<0.16",
    "ty>=0.0.1a8",
    "watchdog>=6.0.0,<7",
    "python-dotenv>=1.0.1,<2",
    "pytest>=9.0.1,<10",
    "pytest-asyncio>=1.3.0,<2",
    "aiosqlite>=0.22.1",
    "respx>=0.22.0",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default arg — FastAPI pattern
    "B904",   # raise from — style choice
    "SIM102", # nested if — readability preference
    "SIM105", # contextlib.suppress — style choice
    "SIM108", # ternary operator — readability preference
    "SIM115", # context manager for open — style choice
    "RUF006", # asyncio.ensure_future return — fire-and-forget pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert statements are idiomatic in tests
    "PLR2004", # magic values in assertions are expected
    "ANN",     # type annotations not required in tests
    "ARG001",  # unused function args (e.g. fixtures)
    "SLF001",  # private member access in tests is fine
]

[tool.ty.environment]
python-version = "3.12"
