[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mycelium-cli"
version = "0.1.0"
description = "Command-line interface for Mycelium IoC/CFN coordination layer"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Cisco ETI", email = "eti@cisco.com" }
]
keywords = ["mycelium", "cli", "cfn", "ioc", "coordination"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "toml>=0.10.2",
    "numpy>=2.4.4",
    "pyfiglet>=1.0.2",
    "beaupy>=3.5.0",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-toml>=0.10.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-toml>=0.10.8",
]

[project.scripts]
mycelium = "mycelium.cli:app"

[project.urls]
Homepage = "https://github.com/mycelium-io/mycelium"
Repository = "https://github.com/mycelium-io/mycelium"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mycelium = [
    "py.typed",
    "docs/**/*.md",
    "adapters/claude-code/**/*",
    "adapters/openclaw/extensions/mycelium/**/*",
    "adapters/openclaw/hooks/mycelium-bootstrap/**/*",
    "adapters/openclaw/hooks/mycelium-knowledge-extract/**/*",
    "docker/*",
    "docker/initdb/*",
    "docker/env.defaults",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = [
    "E501",
    "B008",
    "B904",
    "ARG001",
    "SIM102",
    "SIM105",
    "SIM108",
    "SIM115",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["ARG001", "ARG002"]
"src/mycelium_backend_client/**/*.py" = ["UP", "E", "W", "F", "B", "C4", "I", "ARG", "SIM"]
